--- a/prometheus-playbook.yml
+++ b/prometheus-playbook.yml
@@ -1,1 +1,25 @@
+- name: Install prometheus  
+  hosts: prometheus
+  become: true
+  
+  tasks:
+  - name: Update apt-get repo and cache
+    apt: update_cache=yes force_apt_get=yes cache_valid_time=3600 
 
+  - name: Installing Prometheus 
+    apt:
+      name: prometheus
+      state: present
+  
+  - name: Starting and enabling prometheus service
+    service:
+      name: prometheus
+      state: started
+      enabled: yes
+ 
+  
+  - name: Wait for prometheus to start
+    wait_for:
+      host: localhost
+      port: 9090
+      state: started
