--- a/node-exporter-playbook.yml
+++ b/node-exporter-playbook.yml
@@ -1,1 +1,25 @@
+- name: Install Node-exporter  
+  hosts: nodeexporter
+  become: true
+  
+  tasks:
+  - name: Update apt-get repo and cache
+    apt: update_cache=yes force_apt_get=yes cache_valid_time=3600 
 
+  - name: Installing prometheus-node-exporter 
+    apt:
+      name: prometheus-node-exporter
+      state: present
+  
+  - name: Starting and enabling prometheus-node-exporter service
+    service:
+      name: prometheus-node-exporter
+      state: started
+      enabled: yes
+ 
+  
+  - name: Wait for node-exporter to start
+    wait_for:
+      host: localhost
+      port: 9100
+      state: started
