--- a/push-gateway-playbook.yml
+++ b/push-gateway-playbook.yml
@@ -1,1 +1,25 @@
+- name: Install Push-Gateway  
+  hosts: pushgateway
+  become: true
+  
+  tasks:
+  - name: Update apt-get repo and cache
+    apt: update_cache=yes force_apt_get=yes cache_valid_time=3600 
 
+  - name: Installing Push Gateway
+    apt:
+      name: prometheus-pushgateway
+      state: present
+  
+  - name: Starting and enabling push gateway service
+    service:
+      name: prometheus-pushgateway
+      state: started
+      enabled: yes
+ 
+  
+  - name: Wait for push gateway to start
+    wait_for:
+      host: localhost
+      port: 9091
+      state: started
