--- a/alertmanager-playbook.yml
+++ b/alertmanager-playbook.yml
@@ -1,1 +1,25 @@
+- name: Install Alertmanager  
+  hosts: alertmanager
+  become: true
+  
+  tasks:
+  - name: Update apt-get repo and cache
+    apt: update_cache=yes force_apt_get=yes cache_valid_time=3600 
 
+  - name: Installing Alertmanager 
+    apt:
+      name: prometheus-alertmanager
+      state: present
+  
+  - name: Starting and enabling alertmanager service
+    service:
+      name: prometheus-alertmanager
+      state: started
+      enabled: yes
+ 
+  
+  - name: Wait for alertmanager to start
+    wait_for:
+      host: localhost
+      port: 9093
+      state: started
